worked in the homepage, trying still need to figure out how to create the list ordered inline, also, the footer is pending and some fixes to the alignment of the rows

--- a/rerum/app/assets/stylesheets/static_pages.scss
+++ b/rerum/app/assets/stylesheets/static_pages.scss
@@ -5,13 +5,80 @@
 .banner {
 	padding-left: 10%;
 	padding-right: 10%;
+	background-image: image-url("iStock_83222663_MEDIUM.jpg");
 	background-color: lightblue;
+	height: 600px;
+	background-size: 100%;
+	opacity:100%; 
 }
 
 h1 {
 	text-align: center;
+	color:white;
 }
+
+h2 {
+	text-align: center;
+	color:white;
+}
+
 
 .navbar {
 	margin: 0;
+}
+
+.square {
+	background-color: black;
+	width:26%;
+	height:300px;
+	display: inline-block;
+	margin-left: 5%;
+}
+
+.left {
+	padding-left:10%;
+	padding-top:20px;
+
+}
+
+.right {
+	padding-right:10%;
+	padding-top:20px;
+
+}
+
+.image{
+	height: 200px;
+	width: 350px;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+li {
+    display: block;
+    font-size: 18px;
+}
+
+li:before {
+    /*Using a Bootstrap glyphicon as the bullet point*/
+    content: "\e013";
+    font-family: 'Glyphicons Halflings';
+    font-size: 14px;
+    float: left;
+    margin-top: 4px;
+    margin-left: -20px;
+    color: black;
+}
+
+.body {
+	padding-top: 10px;
+}
+
+.icon{
+	height: 50px;
+	width: 50px;
+	display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
 }
